--- a/src/App.css
+++ b/src/App.css
@@ -97,5 +97,5 @@
 }
 
 .GitHubLogoIcon:hover {
-  opacity: 1;
+  opacity: .75;
 }
